# spam-detection

./: .gitignore  GUIDE.md  GUIDE_v2.md  LESSONS.md  README.md  agent_rl.py  analyze_replay.py  automate_learning.py  benchmark.py  detailed_loss_analyser.py  eval_agent.py  jax_env.py  models.py  orbit_wars_env_numba.py  play_match.py  ppo_trainer.py  pyproject.toml  remote_kaggle.py  rl_env_wrapper.py  rollout_worker.py  shot_dataset.npz  test_env.py  test_jax_stack.py  test_profile.py  test_rollout.py  test_rollout2.py  test_speed.py  train.py  training_log.csv
agents/: hellburner.py  hellburner_v2.py  hellburner_v2_ml.py  may18.py  nearest_planet_sniper.py  orbitbotnext.py  owproto_v2.py  owproto_v3.py  pilkwang.py  pilkwang_v2.py  predictive_sniper.py  predictive_sniper_v2.py  self_play_agent.py  weights.npz  yuriygreben.py
scripts/: collect_data.py  collect_data_old.py  extract_from_replay.py  shot_dataset.npz  train_model.py  train_model_old.py
weights/hellburner_v2/: weights.npz
