[project]
name = "orbit-wars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipython>=9.13.0",
    "kaggle>=2.1.2",
    "kaggle-environments>=1.28.0",
    "pyrefly>=1.0.0",
    "rich>=13.0.0",
    "websocket>=0.2.1",
    "websocket-client>=1.9.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
